--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -14,6 +14,9 @@ body {
     height: 100%;
     width: 100%;
     background-image: url("../assets/images/login-bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     display: flex;
     flex-direction: column;
@@ -22,7 +25,7 @@ body {
 }
 
 .body-container {
-    background-color: brown;
+    /* background-color: brown; */
     width: 80%;
     display: flex;
     justify-content: space-around;
@@ -30,14 +33,60 @@ body {
 }
 
 .left-body-container {
-    width: 300px;
+    width: 400px;
     height: 300px;
     background-color: blue;
 }
 
 .right-body-container {
-    width: 300px;
+    width: 400px;
     height: 300px;
-    background-color: bisque;
+    /* background-color: bisque; */
+    text-align: center;
+}
 
+.login-form-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    /* height: 100%; */
+    padding: 5%;
+    border-radius: 10px;
+    background-color: #000;
+    color: white;
+    opacity: .6;
+}
+
+.form-group{
+    display: flex;
+    justify-content: space-between;
+    vertical-align: middle;
+    /* align-items: center; */
+}
+
+.form-control{
+    width: 70%;
+    height: 40px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.form-group > label {
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.li-btn {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
+    cursor: pointer;
+    margin-bottom: 10px;
 }
