--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -10,6 +10,8 @@ body {
 }
 
 
+/* LOG IN PAGE STARTS HERE */
+
 .login-container {
     height: 100%;
     width: 100%;
@@ -17,7 +19,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,7 +27,7 @@ body {
 
 .body-container {
     /* background-color: brown; */
-    width: 80%;
+    width: 70%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -34,13 +35,17 @@ body {
 
 .left-body-container {
     width: 400px;
-    height: 300px;
-    background-color: blue;
+    /* height: 300px; */
+    /* background-color: blue; */
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 20%;
 }
 
 .right-body-container {
     width: 400px;
-    height: 300px;
+    /* height: 300px; */
     /* background-color: bisque; */
     text-align: center;
 }
@@ -53,15 +58,31 @@ body {
     /* height: 100%; */
     padding: 5%;
     border-radius: 10px;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
-    opacity: .6;
+    opacity: .9;
+}
+
+.signup-form-container{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    width: 450px;
+    /* height: 100%; */
+    padding: 25px;
+    border-radius: 10px;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: red;
+    color: white;
+    opacity: .9;
+    position: absolute;
 }
 
 .form-group{
     display: flex;
     justify-content: space-between;
     vertical-align: middle;
+    
     /* align-items: center; */
 }
 
@@ -70,6 +91,7 @@ body {
     height: 40px;
     border-radius: 10px;
     margin-bottom: 10px;
+    font-size: 20px;
 }
 
 .form-group > label {
@@ -78,15 +100,53 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 10%;
 }
 
 .li-btn {
-    width: 100%;
-    height: 50px;
+    width: 30%;
+    height: 40px;
     border-radius: 10px;
     color: black;
     font-weight: bold;
     font-size: 25px;
     cursor: pointer;
+    margin-top: 15px;
     margin-bottom: 10px;
+    align-self: center;
+    
 }
+
+#create-link{
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    align-self: center;
+    width: fit-content;
+}
+
+
+/* LOG IN PAGE ENDS HERE */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
