--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -12,10 +12,15 @@ body {
 
 /* LOG IN PAGE STARTS HERE */
 
+.site-title{
+    font-size: 100px;
+}
+
 .login-global-container {
     height: 100%;
     width: 100%;
-    background-image: url("../assets/images/login-bg.jpg");
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../assets/images/login-bg.jpg');
+    /* background-image: url("../assets/images/login-bg.jpg"); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,9 +41,8 @@ body {
 
 .left-body-container {
     width: 400px;
-    /* height: 300px; */
     /* background-color: blue; */
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bold;
     color: white;
     margin-bottom: 20%;
@@ -59,7 +63,7 @@ body {
     /* height: 100%; */
     padding: 5%;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     opacity: .9;
 }
@@ -71,12 +75,11 @@ body {
     width: 450px;
     /* height: 100%; */
     padding: 25px;
+    margin-bottom: 10%;
     border-radius: 10px;
-    /* background-color: rgba(0, 0, 0, 0.5); */
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     opacity: .9;
-    position: absolute;
 }
 
 .form-group{
@@ -105,7 +108,7 @@ body {
 }
 
 .li-btn {
-    width: 30%;
+    width: 100px;
     height: 40px;
     border-radius: 10px;
     color: black;
