--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -265,10 +265,40 @@ body {
 
 .restaurant-info-container {
     background-color: darkgreen;
-    height: 50px;
+    /* height: 50px; */
     margin-left: 10%;
     margin-right: 10%;
+    display: flex;
+    padding: 1%;
 }
+
+
+.restaurant-info-left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.restaurant-info-right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.review-btn {
+    font-weight: bold;
+    width: 60px;
+    border-radius: 5px;
+    height: 30px;
+    cursor: pointer;
+}
+
 
 .restaurant-reviews-container {
     background-color: rgb(0, 225, 255);
@@ -278,11 +308,41 @@ body {
 
 .restaurant-review{
     background-color: rgb(255, 127, 249);
-    height: 200px;
+    /* height: 200px; */
     width: 100%;
     margin-bottom: 10%;
+    padding: 20px;
 }
 
+.user-profile-review {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.user-profile-review-icon {
+    background-color: gold;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+
+.user-profile-review-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 15px;
+}
+
+.user-rating-review {
+    color: rgb(255, 189, 22);
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+/* .user-text-review {
+
+} */
 
 
 
