--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -446,3 +446,108 @@ body {
     margin-bottom: 20px;
     margin-left: 20px;
 }
+
+
+
+
+/* ADMIN PAGE STARTS HERE */
+
+
+.admin-global-container {
+    /* background-color: red; */
+    /* background-color: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)); */
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.admin-header-container {
+    background-color: rgba(0, 0, 0, 0.1);
+    /* background-color: aqua; */
+    height: 100px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.user-card-container {
+    margin-top: 3%;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.user-card {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 50%;
+    display: flex;
+    margin: 1%;
+    padding: 1%;
+
+}
+
+.user-card-image {
+    height: 100px;
+    width: 100px;
+    background-color: chartreuse;
+    border-radius: 50%;
+}
+
+.user-card-info {
+    padding-left: 5%;
+}
+
+
+
+
+.admin-reviews-container {
+    margin-top: 3%;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.admin-reviews {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 50%;
+    display: flex;
+    margin: 1%;
+    padding: 1%;
+    justify-content: space-between;
+
+}
+
+
+
+.admin-reviews-info {
+    padding-left: 5%;
+}
+
+
+.add-form-container {
+    margin-top: 5%;
+    padding: 2%;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+#rest_img_upload{
+    align-self: center;
+    width: 100px;
+    height: 100px;
+}
