--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -19,7 +19,7 @@ body {
 .login-global-container {
     height: 100%;
     width: 100%;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../assets/images/login-bg.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../assets/images/eddys.jpg');
     /* background-image: url("../assets/images/login-bg.jpg"); */
     background-position: center;
     background-repeat: no-repeat;
