--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -272,10 +272,9 @@ body {
 
 
 .restaurant-image-container {
-    background-image: url(../assets/images/rest-1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-image: url(../assets/images/rest-1.jpg); */
+    
+    
     height: 500px;
     width: auto;
     margin-top: 10%;
@@ -287,6 +286,16 @@ body {
     border-top-right-radius: 20px;
     border-style: solid;
     border-width: thin;
+    overflow: hidden;
+}
+
+.restaurant-banner-image    {
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    min-width: 100%;
 }
 
 .restaurant-info-container {
