Resetting database with fresh data

--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -249,6 +249,7 @@ body {
     justify-content: space-between;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    overflow: hidden;
 }
 
 .restaurant-image {
