Fetching images from db

--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -363,7 +363,14 @@ body {
     border-radius: 50%;
     height: 50px;
     width: 50px;
+    overflow: hidden;
 }
+
+.user-profile-review-icon > img {
+    height: 100%;
+    width: 100%;
+}
+
 
 .user-profile-review-name {
     display: flex;
