--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -28,6 +28,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-left: 50%;
 }
 
 .login-body-container {
@@ -35,7 +36,8 @@ body {
 
     width: 70%;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    /* justify-content: space-around; */
     flex-wrap: wrap;
 }
 
@@ -44,8 +46,8 @@ body {
     /* background-color: blue; */
     font-size: 40px;
     font-weight: bold;
-    color: white;
-    margin-bottom: 20%;
+    /* color: white; */
+    margin-bottom: 10%;
 }
 
 .right-body-container {
@@ -74,8 +76,14 @@ body {
     justify-content: center;
     width: 450px;
     /* height: 100%; */
+    /* top: 50%; */
+    margin-top: 50%-250px;
+    left: 50%;
+    margin-left: -225px;
+
+    position: absolute;
     padding: 25px;
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
@@ -156,7 +164,7 @@ body {
 .home-body-container {
     /* background-color: rgb(134, 96, 45); */
 
-    background-color: rgba(0, 0, 0, 0.062);
+    /* background-color: rgba(0, 0, 0, 0.062); */
     height: 100%;
     width: 70%;
     padding-bottom: 10%;
@@ -274,8 +282,8 @@ body {
 
 .restaurant-image-container {
     /* background-image: url(../assets/images/rest-1.jpg); */
-    
-    
+
+
     height: 500px;
     width: auto;
     margin-top: 10%;
@@ -290,7 +298,7 @@ body {
     overflow: hidden;
 }
 
-.restaurant-banner-image    {
+.restaurant-banner-image {
 
     background-position: center;
     background-repeat: no-repeat;
@@ -348,7 +356,7 @@ body {
     border-radius: 10px;
     border-style: solid;
     border-width: thin;
-    width: 100%;
+    width: 90%;
     margin-bottom: 10%;
     padding: 20px;
 }
@@ -366,7 +374,7 @@ body {
     overflow: hidden;
 }
 
-.user-profile-review-icon > img {
+.user-profile-review-icon>img {
     height: 100%;
     width: 100%;
 }
@@ -401,6 +409,7 @@ body {
     width: 300px;
     height: 300px;
     margin: 5%;
+    margin-left: 10%;
     border-radius: 50%;
 }
 
@@ -455,7 +464,7 @@ body {
     overflow: hidden;
 }
 
-.restaurant-profile-review-icon > img {
+.restaurant-profile-review-icon>img {
     height: 100%;
     width: 100%;
 }
@@ -532,7 +541,7 @@ body {
     border-radius: 50%;
 }
 
-.user-card-image > img {
+.user-card-image>img {
     width: 100%;
     height: 100%;
     align-self: center;
@@ -608,7 +617,7 @@ body {
 }
 
 
-.edit-form-container > button {
+.edit-form-container>button {
     align-self: center;
     width: 100px;
     height: 30px;
@@ -618,7 +627,8 @@ body {
     font-size: 20px;
     cursor: pointer;
 }
-.edit-form-container > textarea {
+
+.edit-form-container>textarea {
     border-radius: 5px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -627,7 +637,7 @@ body {
 }
 
 
-.profile_image_round{
+.profile_image_round {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -648,10 +658,10 @@ body {
 
     border-radius: 10px;
 
-    
+
 }
 
-.review-form > textarea {
+.review-form>textarea {
     width: 100%;
     border-radius: 5px;
     font-size: 20px;
@@ -674,8 +684,107 @@ body {
     justify-content: space-between;
 }
 
-.label-x > p {
+.label-x>p {
     cursor: pointer;
 }
 
 
+/* ////////////////////////////////////// */
+
+
+@media (max-width: 1300px) {
+    .login-global-container {
+        padding-left: 40%;
+    }
+
+    .admin-header-container > .header-menu > div > a {
+        font-size: 18px;
+    }
+    .user-card{
+        width: 60%;
+    }
+    .add-form-container{
+        width: 60%;
+    }
+    .admin-reviews{
+        width: 60%;
+    }
+    
+}
+
+
+@media (max-width: 1000px) {
+    .login-global-container {
+        padding-left: 30%;
+    }
+
+    .home-body-container {
+        width: 95%;
+    }
+    .admin-header-container > .header-menu{
+        flex-direction: column;
+    }
+    .user-card{
+        width: 70%;
+    }
+    .add-form-container{
+        width: 70%;
+    }
+    .admin-reviews{
+        width: 70%;
+    }
+    
+    
+}
+
+
+
+@media (max-width: 850px) {
+    .login-global-container {
+        padding-left: 20%;
+    }
+
+    .user-card{
+        width: 80%;
+    }
+    .add-form-container{
+        width: 80%;
+    }
+    .admin-reviews{
+        width: 80%;
+    }
+    
+}
+
+
+
+@media (max-width: 700px) {
+    .login-global-container {
+        padding-left: 10%;
+    }
+}
+
+@media (max-width: 600px) {
+    .login-global-container {
+        padding-left: 0%;
+    }
+
+    .profile-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+}
+
+
+.admin-global-container {
+    /* background-color: red; */
+    /* background-color: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)); */
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
