--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -411,8 +411,14 @@ body {
     margin: 5%;
     margin-left: 10%;
     border-radius: 50%;
+ text-align: center;
 }
 
+.profile-image-round {
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 .profile-container {
     display: flex;
@@ -537,14 +543,18 @@ body {
     overflow: hidden;
     height: 100px;
     width: 100px;
-    background-color: chartreuse;
+    background-color: rgba(0, 0, 0, 0.01);
     border-radius: 50%;
+    text-align: center;
+    
 }
 
 .user-card-image>img {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
-    align-self: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .user-card-info {
